lexical-core/ffi/lexical_core.h

extern const size_t MAX_I8_SIZE_BASE10_FFI;
extern const size_t MAX_I16_SIZE_BASE10_FFI;
extern const size_t MAX_I32_SIZE_BASE10_FFI;
extern const size_t MAX_I64_SIZE_BASE10_FFI;
extern const size_t MAX_ISIZE_SIZE_BASE10_FFI;
extern const size_t MAX_U8_SIZE_BASE10_FFI;
extern const size_t MAX_U16_SIZE_BASE10_FFI;
extern const size_t MAX_U32_SIZE_BASE10_FFI;
extern const size_t MAX_U64_SIZE_BASE10_FFI;
extern const size_t MAX_USIZE_SIZE_BASE10_FFI;
extern const size_t MAX_F32_SIZE_BASE10_FFI;
extern const size_t MAX_F64_SIZE_BASE10_FFI;
// C-compatible error for FFI.
struct Error {
    int32_t code;
    size_t index;
};
// UNIONS

union UnionI8 {
    int8_t value;
    Error error;
};
union UnionI16 {
    int16_t value;
    Error error;
};
union UnionI32 {
    int32_t value;
    Error error;
};
union UnionI64 {
    int64_t value;
    Error error;
};
union UnionIsize {
    // Assume ptrdiff_t and size_t are the same size.
    ptrdiff_t value;
    Error error;
};
union UnionU8 {
    uint8_t value;
    Error error;
};
union UnionU16 {
    uint16_t value;
    Error error;
};
union UnionU32 {
    uint32_t value;
    Error error;
};
union UnionU64 {
    uint64_t value;
    Error error;
};
union UnionUsize {
    size_t value;
    Error error;
};
union UnionF32 {
    float value;
    Error error;
};
union UnionF64 {
    double value;
    Error error;
};
// RESULTS

struct ResultI8 {
    uint32_t tag;
    UnionI8 data;
};
struct ResultI16 {
    uint32_t tag;
    UnionI16 data;
};
struct ResultI32 {
    uint32_t tag;
    UnionI32 data;
};
struct ResultI64 {
    uint32_t tag;
    UnionI64 data;
};
struct ResultIsize {
    uint32_t tag;
    UnionIsize data;
};
extern bool isize_result_ffi_is_ok(ResultIsize result);
extern bool isize_result_ffi_is_err(ResultIsize result);
extern ptrdiff_t isize_result_ffi_ok(ResultIsize result);
extern Error isize_result_ffi_err(ResultIsize result);
struct ResultU8 {
    uint32_t tag;
    UnionU8 data;
};
extern bool u8_result_ffi_is_ok(ResultU8 result);
extern bool u8_result_ffi_is_err(ResultU8 result);
extern uint8_t u8_result_ffi_ok(ResultU8 result);
extern Error u8_result_ffi_err(ResultU8 result);
struct ResultU16 {
    uint32_t tag;
    UnionU16 data;
};
extern bool u16_result_ffi_is_ok(ResultU16 result);
extern bool u16_result_ffi_is_err(ResultU16 result);
extern uint16_t u16_result_ffi_ok(ResultU16 result);
extern Error u16_result_ffi_err(ResultU16 result);
struct ResultU32 {
    uint32_t tag;
    UnionU32 data;
};
extern bool u32_result_ffi_is_ok(ResultU32 result);
extern bool u32_result_ffi_is_err(ResultU32 result);
extern uint32_t u32_result_ffi_ok(ResultU32 result);
extern Error u32_result_ffi_err(ResultU32 result);
struct ResultU64 {
    uint32_t tag;
    UnionU64 data;
};
extern bool u64_result_ffi_is_ok(ResultU64 result);
extern bool u64_result_ffi_is_err(ResultU64 result);
extern uint64_t u64_result_ffi_ok(ResultU64 result);
extern Error u64_result_ffi_err(ResultU64 result);
struct ResultUsize {
    uint32_t tag;
    UnionUsize data;
};
extern bool usize_result_ffi_is_ok(ResultUsize result);
extern bool usize_result_ffi_is_err(ResultUsize result);
extern size_t usize_result_ffi_ok(ResultUsize result);
extern Error usize_result_ffi_err(ResultUsize result);
struct ResultF32 {
    uint32_t tag;
    UnionF32 data;
};
extern bool f32_result_ffi_is_ok(ResultF32 result);
extern bool f32_result_ffi_is_err(ResultF32 result);
extern float f32_result_ffi_ok(ResultF32 result);
extern Error f32_result_ffi_err(ResultF32 result);
struct ResultF64 {
    uint32_t tag;
    UnionF64 data;
};
extern bool f64_result_ffi_is_ok(ResultF64 result);
extern bool f64_result_ffi_is_err(ResultF64 result);
extern double f64_result_ffi_ok(ResultF64 result);
extern Error f64_result_ffi_err(ResultF64 result);