lexical-core/ffi/lexical_core.py


LIB.isize_result_ffi_is_ok.restype = c_bool
LIB.isize_result_ffi_is_err.restype = c_bool
LIB.isize_result_ffi_ok.restype = c_ssize_t
LIB.isize_result_ffi_err.restype = Error

class ResultIsize(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionIsize)
    ]

    def is_ok(self):
        return LIB.isize_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.isize_result_ffi_is_err(self)

    def ok(self):
        return LIB.isize_result_ffi_ok(self)

    def err(self):
        return LIB.isize_result_ffi_err(self)

LIB.u8_result_ffi_is_ok.restype = c_bool
LIB.u8_result_ffi_is_err.restype = c_bool
LIB.u8_result_ffi_ok.restype = c_uint8
LIB.u8_result_ffi_err.restype = Error

class ResultU8(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionU8)
    ]

    def is_ok(self):
        return LIB.u8_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.u8_result_ffi_is_err(self)

    def ok(self):
        return LIB.u8_result_ffi_ok(self)

    def err(self):
        return LIB.u8_result_ffi_err(self)

LIB.u16_result_ffi_is_ok.restype = c_bool
LIB.u16_result_ffi_is_err.restype = c_bool
LIB.u16_result_ffi_ok.restype = c_uint16
LIB.u16_result_ffi_err.restype = Error

class ResultU16(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionU16)
    ]

    def is_ok(self):
        return LIB.u16_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.u16_result_ffi_is_err(self)

    def ok(self):
        return LIB.u16_result_ffi_ok(self)

    def err(self):
        return LIB.u16_result_ffi_err(self)

LIB.u32_result_ffi_is_ok.restype = c_bool
LIB.u32_result_ffi_is_err.restype = c_bool
LIB.u32_result_ffi_ok.restype = c_uint32
LIB.u32_result_ffi_err.restype = Error

class ResultU32(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionU32)
    ]

    def is_ok(self):
        return LIB.u32_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.u32_result_ffi_is_err(self)

    def ok(self):
        return LIB.u32_result_ffi_ok(self)

    def err(self):
        return LIB.u32_result_ffi_err(self)

LIB.u64_result_ffi_is_ok.restype = c_bool
LIB.u64_result_ffi_is_err.restype = c_bool
LIB.u64_result_ffi_ok.restype = c_uint64
LIB.u64_result_ffi_err.restype = Error

class ResultU64(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionU64)
    ]

    def is_ok(self):
        return LIB.u64_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.u64_result_ffi_is_err(self)

    def ok(self):
        return LIB.u64_result_ffi_ok(self)

    def err(self):
        return LIB.u64_result_ffi_err(self)

LIB.usize_result_ffi_is_ok.restype = c_bool
LIB.usize_result_ffi_is_err.restype = c_bool
LIB.usize_result_ffi_ok.restype = c_size_t
LIB.usize_result_ffi_err.restype = Error

class ResultUsize(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionUsize)
    ]

    def is_ok(self):
        return LIB.usize_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.usize_result_ffi_is_err(self)

    def ok(self):
        return LIB.usize_result_ffi_ok(self)

    def err(self):
        return LIB.usize_result_ffi_err(self)

LIB.f32_result_ffi_is_ok.restype = c_bool
LIB.f32_result_ffi_is_err.restype = c_bool
LIB.f32_result_ffi_ok.restype = c_float
LIB.f32_result_ffi_err.restype = Error

class ResultF32(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionF32)
    ]

    def is_ok(self):
        return LIB.f32_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.f32_result_ffi_is_err(self)

    def ok(self):
        return LIB.f32_result_ffi_ok(self)

    def err(self):
        return LIB.f32_result_ffi_err(self)

LIB.f64_result_ffi_is_ok.restype = c_bool
LIB.f64_result_ffi_is_err.restype = c_bool
LIB.f64_result_ffi_ok.restype = c_double
LIB.f64_result_ffi_err.restype = Error

class ResultF64(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionF64)
    ]

    def is_ok(self):
        return LIB.f64_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.f64_result_ffi_is_err(self)

    def ok(self):
        return LIB.f64_result_ffi_ok(self)

    def err(self):
        return LIB.f64_result_ffi_err(self)

# API
# ---

# HELPERS

def _to_address(ptr):
    return cast(ptr, c_voidp).value

def _to_u8_ptr(address):
    return cast(address, POINTER(c_ubyte))

def _distance(first, last):
    return _to_address(last) - _to_address(first)

# TO_STRING

def _to_string(name, max_size, type, value):
    buffer_type = c_ubyte * max_size
    buffer = buffer_type()
    if not isinstance(value, type):
        value = type(value)
    cb = getattr(LIB, name)
    first = _to_u8_ptr(buffer)
    last = _to_u8_ptr(_to_address(first) + len(buffer))
    ptr = cb(value, first, last)
    length = _distance(first, ptr)
    return string_at(buffer, length)

LIB.i8toa_range.restype = POINTER(c_ubyte)
LIB.i16toa_range.restype = POINTER(c_ubyte)
LIB.i32toa_range.restype = POINTER(c_ubyte)
LIB.i64toa_range.restype = POINTER(c_ubyte)
LIB.isizetoa_range.restype = POINTER(c_ubyte)
LIB.u8toa_range.restype = POINTER(c_ubyte)
LIB.u16toa_range.restype = POINTER(c_ubyte)
LIB.u32toa_range.restype = POINTER(c_ubyte)
LIB.u64toa_range.restype = POINTER(c_ubyte)
LIB.usizetoa_range.restype = POINTER(c_ubyte)
LIB.f32toa_range.restype = POINTER(c_ubyte)
LIB.f64toa_range.restype = POINTER(c_ubyte)

def i8toa(value):
    '''Format 8-bit signed integer to bytes'''
    return _to_string('i8toa_range', MAX_I8_SIZE_BASE10_FFI, c_int8, value)

def i16toa(value):
    '''Format 16-bit signed integer to bytes'''
    return _to_string('i16toa_range', MAX_I16_SIZE_BASE10_FFI, c_int16, value)

def i32toa(value):
    '''Format 32-bit signed integer to bytes'''
    return _to_string('i32toa_range', MAX_I32_SIZE_BASE10_FFI, c_int32, value)

def i64toa(value):
    '''Format 64-bit signed integer to bytes'''
    return _to_string('i64toa_range', MAX_I64_SIZE_BASE10_FFI, c_int64, value)

def isizetoa(value):
    '''Format ssize_t to bytes'''
    return _to_string('isizetoa_range', MAX_ISIZE_SIZE_BASE10_FFI, c_ssize_t, value)

def u8toa(value):
    '''Format 8-bit unsigned integer to bytes'''
    return _to_string('u8toa_range', MAX_U8_SIZE_BASE10_FFI, c_uint8, value)

def u16toa(value):
    '''Format 16-bit unsigned integer to bytes'''
    return _to_string('u16toa_range', MAX_U16_SIZE_BASE10_FFI, c_uint16, value)

def u32toa(value):
    '''Format 32-bit unsigned integer to bytes'''
    return _to_string('u32toa_range', MAX_U32_SIZE_BASE10_FFI, c_uint32, value)

def u64toa(value):
    '''Format 64-bit unsigned integer to bytes'''
    return _to_string('u64toa_range', MAX_U64_SIZE_BASE10_FFI, c_uint64, value)

def usizetoa(value):
    '''Format size_t to bytes'''
    return _to_string('usizetoa_range', MAX_USIZE_SIZE_BASE10_FFI, c_size_t, value)

def f32toa(value):
    '''Format 32-bit float to bytes'''
    return _to_string('f32toa_range', MAX_F32_SIZE_BASE10_FFI, c_float, value)

def f64toa(value):
    '''Format 64-bit float to bytes'''
    return _to_string('f64toa_range', MAX_F64_SIZE_BASE10_FFI, c_double, value)

# PARSE

def _parse(name, data):
    if not isinstance(data, (bytes, bytearray)):
        raise TypeError("Must parse from bytes.")
    cb = getattr(LIB, name)
    first = _to_u8_ptr(data)
    last = _to_u8_ptr(_to_address(first) + len(data))
    result = cb(first, last)
    if result.is_ok():
        return result.ok()
    else:
        return result.err()

LIB.atoi8_range.restype = ResultI8
LIB.atoi16_range.restype = ResultI16
LIB.atoi32_range.restype = ResultI32
LIB.atoi64_range.restype = ResultI64
LIB.atoisize_range.restype = ResultIsize
LIB.atou8_range.restype = ResultU8
LIB.atou16_range.restype = ResultU16
LIB.atou32_range.restype = ResultU32
LIB.atou64_range.restype = ResultU64
LIB.atousize_range.restype = ResultUsize
LIB.atof32_range.restype = ResultF32
LIB.atof64_range.restype = ResultF64

def atoi8(data):
    '''Parse 8-bit signed integer from bytes.'''
    return _parse('atoi8_range', data)

def atoi16(data):
    '''Parse 16-bit signed integer from bytes.'''
    return _parse('atoi16_range', data)

def atoi32(data):
    '''Parse 32-bit signed integer from bytes.'''
    return _parse('atoi32_range', data)

def atoi64(data):
    '''Parse 64-bit signed integer from bytes.'''
    return _parse('atoi64_range', data)

def atoisize(data):
    '''Parse ssize_t from bytes.'''
    return _parse('atoisize_range', data)

def atou8(data):
    '''Parse 8-bit unsigned integer from bytes.'''
    return _parse('atou8_range', data)

def atou16(data):
    '''Parse 16-bit unsigned integer from bytes.'''
    return _parse('atou16_range', data)

def atou32(data):
    '''Parse 32-bit unsigned integer from bytes.'''
    return _parse('atou32_range', data)

def atou64(data):
    '''Parse 64-bit unsigned integer from bytes.'''
    return _parse('atou64_range', data)

def atousize(data):
    '''Parse size_t from bytes.'''
    return _parse('atousize_range', data)

def atof32(data):
    '''Parse 32-bit float from bytes.'''
    return _parse('atof32_range', data)

def atof64(data):
    '''Parse 64-bit float from bytes.'''
    return _parse('atof64_range', data)

# PARSE_LOSSY

LIB.atof32_lossy_range.restype = ResultF32
LIB.atof64_lossy_range.restype = ResultF64

def atof32_lossy(data):
    '''Parse 32-bit float from bytes.'''
    return _parse('atof32_lossy_range', data)

def atof64_lossy(data):
    '''Parse 64-bit float from bytes.'''
    return _parse('atof64_lossy_range', data)

if hasattr(LIB, 'atof32_radix_range'):
    # Have radix support.

    # TO_STRING_RADIX
    def _to_string_radix(name, max_size, type, value, radix):
        buffer_type = c_ubyte * max_size
        buffer = buffer_type()
        if not isinstance(value, type):
            value = type(value)
        if not isinstance(radix, c_uint8):
            radix = c_uint8(radix)
        cb = getattr(LIB, name)
        first = _to_u8_ptr(buffer)
        last = _to_u8_ptr(_to_address(first) + len(buffer))
        ptr = cb(value, radix, first, last)
        length = _distance(first, ptr)
        return string_at(buffer, length)

    LIB.i8toa_radix_range.restype = POINTER(c_ubyte)
    LIB.i16toa_radix_range.restype = POINTER(c_ubyte)
    LIB.i32toa_radix_range.restype = POINTER(c_ubyte)
    LIB.i64toa_radix_range.restype = POINTER(c_ubyte)
    LIB.isizetoa_radix_range.restype = POINTER(c_ubyte)
    LIB.u8toa_radix_range.restype = POINTER(c_ubyte)
    LIB.u16toa_radix_range.restype = POINTER(c_ubyte)
    LIB.u32toa_radix_range.restype = POINTER(c_ubyte)
    LIB.u64toa_radix_range.restype = POINTER(c_ubyte)
    LIB.usizetoa_radix_range.restype = POINTER(c_ubyte)
    LIB.f32toa_radix_range.restype = POINTER(c_ubyte)
    LIB.f64toa_radix_range.restype = POINTER(c_ubyte)

    def i8toa_radix(value, radix):
        '''Format 8-bit signed integer to bytes'''
        return _to_string_radix('i8toa_radix_range', MAX_I8_SIZE_BASE10_FFI, c_int8, value, radix)

    def i16toa_radix(value, radix):
        '''Format 16-bit signed integer to bytes'''
        return _to_string_radix('i16toa_radix_range', MAX_I16_SIZE_BASE10_FFI, c_int16, value, radix)

    def i32toa_radix(value, radix):
        '''Format 32-bit signed integer to bytes'''
        return _to_string_radix('i32toa_radix_range', MAX_I32_SIZE_BASE10_FFI, c_int32, value, radix)

    def i64toa_radix(value, radix):
        '''Format 64-bit signed integer to bytes'''
        return _to_string_radix('i64toa_radix_range', MAX_I64_SIZE_BASE10_FFI, c_int64, value, radix)

    def isizetoa_radix(value, radix):
        '''Format ssize_t to bytes'''
        return _to_string_radix('isizetoa_radix_range', MAX_ISIZE_SIZE_BASE10_FFI, c_ssize_t, value, radix)
